# pytest-omc4py

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pytest_omc4py/: __init__.py  plugin.py
