[tool.poetry]
name = "pytest-omc4py"
version = "0.0.0"
description = "pytest plugin that allows to test OpenModelica models using the OpenModelicaCompiler package"
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = ">=5"
openmodelicacompiler = ">=0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5"


[tool.poetry.group.static-test.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
